# datathon-grupo-65

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  pyrightconfig.json  training_output.json
.github/workflows/: ci.yml  retraining.yml
configs/: alert.rules.yml  model_config.yaml  prometheus.yml
configs/grafana/provisioning/dashboards/: churn_metrics.json  dashboard.yaml
data/golden_set/: golden_set.json
data/knowledge_base/: churn_patterns.md  churn_risk_factors.md  product_recommendations.md  retention_strategies.md
docs/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: README.md  benchmark.py  benchmark_results.json  champion_challenger_report.json  llm_judge.py  llm_judge_results.json  model_metrics.json  ragas_eval.py  ragas_results.json
model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
notebooks/: 01_eda.ipynb
scripts/: build_index.py  champion_challenger.py  entrypoint.sh  evaluate_model.py  export_model.py  generate_dev_data.py  prepare_data.py  seed_drift.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/features/: feature_engineering.py  feature_store.py
src/models/: train.py
src/monitoring/: __init__.py  drift.py  metrics.py  telemetry.py
src/security/: __init__.py  guardrails.py
src/serving/: app.py  health.py
tests/: conftest.py  test_agent.py  test_api.py  test_champion_challenger.py  test_evaluation.py  test_feature_store.py  test_features.py  test_guardrails.py  test_models.py  test_monitoring.py
tests/fixtures/: synthetic_data.py
